# esp32s3-lvgl

./: CMakeLists.txt  ProPrj_SCH_1.69寸触摸屏驱动板v2_2024-10-31_2024-11-01.epro  README.md  about.txt  partitions.csv  sdkconfig  sdkconfig.old  添加中文字库教程.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/inc/: Chart.h  Clock.h  Notification.h  Version.h  app_screen.h  boot.h  desktop_clock.h  desktop_clock_1.h  desktop_clock_2.h  desktop_clock_3.h  desktop_clock_4.h  desktop_clock_5.h  fragment.h  icon.h  pwm_ledc.h  root_page.h  status_bar.h  sys.h  util.h  watch_screen.h  weather_http.h
main/inc/AI/: doubao.h  uart_doubao.h
main/inc/Aliot/: aliot.h
main/inc/Audio/: audio_player.h
main/src/: Chart.c  Clock.c  Notification.c  Version.c  app_screen.c  boot.c  desktop_clock.c  desktop_clock_1.c  desktop_clock_2.c  desktop_clock_3.c  desktop_clock_4.c  desktop_clock_5.c  fragment.c  pwm_ledc.c  root_page.c  status_bar.c  util.c  watch_screen.c  weather_http.c
main/src/AI/: doubao.c  uart_doubao.c
main/src/Aliot/: aliot.c
main/src/Fonts/: Calender_font_cn_14_t.c  Calender_font_cn_16_t.c  Clock_font_24_t.c  Clock_font_cn_16_t.c  app_screen_cn_font_20_t.c  app_setting_cn_font_16_t.c  app_tools_cn_font_16_t.c  clock_font_cn_24_t.c  clock_font_cn_36_t.c  desktop_watch_font_80_t.c  flash_font_16_t.c  music_font_22_t.c  version_font_cn_14_t.c  version_font_cn_16_t.c  watch_2_cn_font_14_t.c  watch_2_cn_font_22_t.c  watch_2_font_65_t.c  watch_2_font_95_t.c  watch_3_font_35_t.c  watch_3_font_65_t.c  watch_3_font_cn_12_t.c  watch_3_font_cn_20_t.c  (+12 more)
(+112 files in other folders)
